[package]
name = "shims"
version = "0.1.0"
edition = "2024"
authors = ["Vladimir Krinitsyn <v.krinitsyn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A sliding window histogram data for metrics and telemetry"
homepage = "https://github.com/vkrinitsyn/shim.git"
repository = "https://github.com/vkrinitsyn/shim.git"
